2017-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Renamed the Windows icons.
2017-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/common/config.cpp' and
	'src/common/config.h' that caused the Username to be detected
	from the environment by RDAdminb(1).
2017-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Added the Version, Hostname and Username to the titlebar of
	RDLibararyb(1) and RDLogEditb(1).
	* Added the Version to the titlebar of RDAdminb(1).
2017-02-24 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make nsis-installer' target.
2017-02-24 Fred Gleason <fredg@paravelsystems.com>
	* Added a drop-down control with enumerated sound devices for MME
	audio in 'src/rdadminb/rdadminb.cpp' and
	'src/rdadminb/rdadminb.h'.
2017-02-24 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a typo in 'src/rdadminb/Makefile.am',
	'src/rdlibraryb/Makefile.am' and 'src/rdlogeditb/Makefile.am' that
	broke the build on Linux.
2017-02-24 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make nsis-installer' target.
	* Modified 'COPYING.rtf' to be compatible with the NSIS dialog layout.
2017-02-24 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.0.
2017-02-28 Fred Gleason <fredg@paravelsystems.com>
	* Extended 'StreamPlayer in 'src/common/streamplayer_alsa.cpp' to
	support playing mono files on hardware without direct support for
	mono.
2017-02-28 Fred Gleason <fredg@paravelsystems.com>
	* Added 'libsamplerate-0.dll' to the 'make winstall-win32' target.
	* Added 'libsamplerate-0.dll' to the set of installed DLLs in
	'rivendell-browser.nsi.in'.
2017-03-01 Fred Gleason <fredg@paravelsystems.com>
	* Changed the default error message in
	'src/common/streamplayer_alsa.cpp' and
	'src/common/streamplayer_mme.cpp' to 'No audio available'.
2017-03-01 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/common/cartfilterwidget.cpp' that caused
	the 'Clear' button to be disabled after executing a search.